# EyeEarNoseMouthFaceDetection

./: CMakeLists.txt  README.md
src/: earDetector.cpp  overlayFacemask.cpp  overlayMoustache.cpp  overlayNose.cpp  overlaySunglasses.cpp
